# harfbuzz-whatever

./: .gitmodules  CMakeLists.txt  LICENSE.md  check.sh
config/: hb-version.h.in
config/internal/: config.h.in
include/: hb.h
src/: hb-atomic-private.hh  hb-buffer-serialize.cc  hb-directwrite.cc  hb-mutex-private.hh  hb-ot-shape-complex-indic.cc  hb-ot-shape-complex-myanmar.cc  hb-ot-shape-complex-use.cc  hb-private.hh
